# jrxtx

./: .gitignore  .gitmodules  .travis.yml  Makefile.am  Makefile.in  README  README.OSX  README.adoc  README.md  build.gradle  configuration.gradle  configure  configure.in  generate_cdt_project.sh  mkinstalldirs  settings.gradle
CNI/: SerialImp.c  SerialImp.h
debian/: README.Debian  changelog  control  copyright  librxtx-java.dirs  librxtx-java.doc-base  librxtx-java.docs  librxtx-java.jlibs  librxtx-java.lintian-overrides  rules  rulesold  watch
debian/patches/: MonitorThread-daemon.patch  debian_porting.patch  fhs_lock_buffer_overflow_fix.patch  fix_snprintf.patch  format_security.patch  kfreebsd_libpthread.patch  kfreebsd_port.patch  multiple_property_dirs.patch  original_debian_changes.patch  port_to_hurd.patch  series  uninstall_target.patch  usb_38400.patch  zsystem_init_exception.patch
doc/: CHANGELOG.txt  CHANGELOG.xml  changelog.debian
doc/userguide/: makedoc.sh
doc/userguide/themes/openmuc/: openmuc.css
docs/: CHANGELOG.txt
docs/javadoc/: DataBits.html  FlowControl.html  Parity.html  PortNotFoundException.html  SerialPort.html  SerialPortBuilder.html  SerialPortException.html  SerialPortTimeoutException.html  StopBits.html  allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  package-frame.html  package-list  package-summary.html  package-tree.html  serialized-form.html
docs/javadoc/org/openmuc/jrxtx/: DataBits.html  FlowControl.html  Parity.html  PortNotFoundException.html  SerialPort.html  SerialPortBuilder.html  SerialPortException.html  SerialPortTimeoutException.html  StopBits.html  package-frame.html  package-summary.html  package-tree.html
gnu-io/: build.gradle
gnu-io/src/main/java/gnu/io/: CommPortEnum.java  CommPortException.java  CommPortIdentifier.java  I2C.java  LPRPort.java  PortInUseException.java  RS485Port.java  (+3 more)
gradle/wrapper/: gradle-wrapper.properties
jrxtx/: build.gradle
jrxtxWrapper/: build.gradle
license/: NOTICE
native/: .gitignore  BUILD.sh  BUILD_java8.sh  CMakeLists.txt  Makefile.am  Makefile.in  Makefile.macosx  Makefile.mingw32  Makefile.msvc  README.md  autogen.sh  config.h.in  configure  configure.ac  configure.in  gen+conf.sh
native/src/: I2CImp.c  ParallelImp.c  ParallelImp.h  RS485Imp.c  SerialImp.c  SerialImp.h  SerialPort.cpp  SerialPort.h  Test.c  Test.h  fixup.c  init.c  init.cc  termios.c  win32termios.h
native/src/WinCE/: StdAfx.h  rxtxHelpers.h
native/src/include/: gnu_io_CommPortIdentifier.h  gnu_io_I2C.h  gnu_io_LPRPort_ParallelInputStream.h  gnu_io_RS485.h  gnu_io_RXTXCommDriver.h  gnu_io_RXTXPort.h  gnu_io_RXTXVersion.h  gnu_io_Raw.h  gnu_io_Raw_RawInputStream.h  org_openmuc_serialio_SerialPort.h
native/src/jni/: org_openmuc_serialio_SerialPort.h
native/toolchain_files/: Toolchain_arm-linux-gnueabi-g++.cmake  Toolchain_arm-linux-gnueabihf-g++.cmake  Toolchain_host_system.cmake  Toolchain_host_system_g++-4.7.cmake  Toolchain_i686_mingw32-gcc.cmake  Toolchain_x86_gcc.cmake
old_native/: Makefile.in  autogen.sh  configure.ac  ltconfig
old_native/eclipse/: ies_eclipse_native_formatter_v1.xml
old_native/src/: I2CImp.c  I2CImp.h  ParallelImp.c  RawImp.c  RawImp.h  SerialImp.c  SerialImp.cpp  fuserImp.c  portmode.c
old_native/src/WinCE/: StdAfx.cpp  gnu_io_RXTXCommDriver.cpp  gnu_io_RXTXCommDriver.h  gnu_io_RXTXPort.cpp  gnu_io_RXTXPort.h  rxtxHelpers.cpp  rxtxSerial.cpp
old_native/src/include/: gnu_io_CommPortIdentifier.h  gnu_io_I2C_I2CInputStream.h  gnu_io_LPRPort.h  gnu_io_RS485_RS485InputStream.h  gnu_io_RXTXPort_SerialInputStream.h
old_native/src/lfd/: lockdaemon.c
old_native/src/psmisc/: fuser.c  testing.c
src/: I2CImp.c  ParallelImp.c  RS485Imp.c  RawImp.c  SerialImp.c  SerialImp.cpp  SerialImp.h
src/docs/asciidoc/: common-settings.txt  common_settings.txt  jrxtx-doc.adoc  jrxtx-doc.txt  openmuc-asciidoc.css  pdf-theme.yml
src/gnu/io/: I2C.java  RXTXCommDriver.java  RXTXPort.java
src/itest/: README.txt  setup-virtual-serial-ports.sh
src/itest/tty0tty/: README.txt  tty0tty32  tty0tty64
src/lfd/: lockdaemon.c  lockdaemon.c.noinetd
src/main-rxtx/java/gnu/io/: RXTXCommDriver.java  RXTXVersion.java  UnsupportedCommOperationException.java
src/main/java/gnu/io/: AbstractCommPort.java  CommDriver.java  CommPort.java  CommPortEnum.java  CommPortEnumerator.java  CommPortException.java  CommPortIdentifier.java  CommPortOwnershipListener.java  CommPortTimeoutException.java  Configure.java  Enu.java  I2C.java  I2CPort.java  I2CPortEvent.java  I2CPortEventListener.java  LPRPort.java  LibLoadException.java  LibraryLoader.java  NoSuchPortException.java  ParallelPort.java  ParallelPortEvent.java  ParallelPortEventListener.java  PortInUseException.java  RS485.java  RS485Port.java  RS485PortEvent.java  RS485PortEventListener.java  RXTXCommDriver.java  RXTXPort.java  RXTXVersion.java  Raw.java  RawPort.java  RawPortEvent.java  RawPortEventListener.java  SerialPort.java  SerialPortEvent.java  SerialPortEventListener.java  UnSupportedLoggerException.java  UnsupportedCommOperationException.java  Zystem.java
src/native/: I2CImp.c  ParallelImp.c  RS485Imp.c  RawImp.c  SerialImp.c  SerialImp.cpp  SerialImp.h  fuserImp.c
src/native/psmisc/: fuser.c
src/old-itest/: setup-virtual-serial-ports.sh
src/old-itest/tty0tty/: README.txt
src/old-main/java/gnu/io/: CommDriver.java  CommPort.java  CommPortEnumerator.java  CommPortIdentifier.java  CommPortTimeoutException.java  Enu.java  I2CPort.java  NoSuchPortException.java  ParallelPort.java  RS485.java  RXTXCommDriver.java  RXTXPort.java  RXTXVersion.java  Raw.java  Zystem.java  package-info.java
src/old-test/java/gnu/io/: CommPortIdentifierTest.java  RXTXCommDriverTest.java
src/test/java/gnu/io/: CommPortIdentifierTest.java  LibraryLoaderTest.java  RXTXCommDriverTest.java  RXTXPortTest.java  RXTXTestSuite.java
src_old/main/java/gnu/io/: Raw.java  package-info.java
src_old/main/test/gnu/io/: CommPortIdentifierTest.java
(+43 files in other folders)
